tests/baselines/reference/errorMessageOnObjectLiteralType(strict=true).errors.txt
errorMessageOnObjectLiteralType.ts(5,1): error TS2454: Variable 'x' is used before being assigned.
errorMessageOnObjectLiteralType.ts(5,3): error TS2339: Property 'getOwnPropertyNamess' does not exist on type '{ a: string; b: number; }'.
errorMessageOnObjectLiteralType.ts(6,8): error TS2551: Property 'getOwnPropertyNamess' does not exist on type 'ObjectConstructor'. Did you mean 'getOwnPropertyNames'?


==== errorMessageOnObjectLiteralType.ts (3 errors) ====
    var x: {
        a: string;
        b: number;
    };
    x.getOwnPropertyNamess();
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
      ~~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'getOwnPropertyNamess' does not exist on type '{ a: string; b: number; }'.
    Object.getOwnPropertyNamess(null);
           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2551: Property 'getOwnPropertyNamess' does not exist on type 'ObjectConstructor'. Did you mean 'getOwnPropertyNames'?
!!! related TS2728 lib.es5.d.ts:--:--: 'getOwnPropertyNames' is declared here.